font-awesome - fb - twitter

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "normalize.css": "~3.0.2",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "fontawesome": "~4.3.0"
   }
 }
